<?xml version="1.0"?>
<package format="2">
  <name>ds_sensors</name>
  <version>0.1.0</version>
  <description>The ds_sensors package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nobody@nowhere.com">NONE</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://bitbucket.org/whoidsl/ds_sensors</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="ivaughn@whoi.edu">Ian Vaughn</author>
  <author email="ssuman@whoi.edu">Stefano Suman</author>
  <author email="zberkowitz@whoi.edu">Zac Berkowitz</author>
  <author email="jvaccaro@whoi.edu">J Vaccaro</author>
  <author email="linzhao@uri.edu">Lin Zhao</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>

  <build_depend>ds_base</build_depend>
  <build_export_depend>ds_base</build_export_depend>
  <exec_depend>ds_base</exec_depend>


  <build_depend>ds_util</build_depend>
  <exec_depend>ds_util</exec_depend>

  <build_depend>ds_hotel_msgs</build_depend>
  <build_export_depend>ds_hotel_msgs</build_export_depend>
  <exec_depend>ds_hotel_msgs</exec_depend>

  <build_depend>ds_sensor_msgs</build_depend>
  <build_export_depend>ds_sensor_msgs</build_export_depend>
  <exec_depend>ds_sensor_msgs</exec_depend>

  <build_depend>ds_nmea_msgs</build_depend>
  <build_export_depend>ds_nmea_msgs</build_export_depend>
  <exec_depend>ds_nmea_msgs</exec_depend>

  <build_depend>ds_nmea_parsers</build_depend>
  <build_export_depend>ds_nmea_parsers</build_export_depend>
  <exec_depend>ds_nmea_parsers</exec_depend>

  <build_depend>ds_core_msgs</build_depend>
  <build_export_depend>ds_core_msgs</build_export_depend>
  <exec_depend>ds_core_msgs</exec_depend>

  <exec_depend>message_runtime</exec_depend>

  <build_depend>cmake_modules</build_depend>
  <exec_depend>cmake_modules</exec_depend>

  <build_depend>boost</build_depend>
  <exec_depend>boost</exec_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <exec_depend>eigen</exec_depend>

  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
